Collapsing Pages Changelog

* 0.4 (2009/02/10)
    * totally revised and improved style selecting methods
    * fixed settings panel issue
    * reduced number of queries

* 0.3.5 (2009/02/04)
    * Updated internationalization support
    * Can now exclude and auto-expand using page slug or ID
    * Added option to make clicking on parent page expand sub-pages

* 0.3.4 (2009/01/21)
    * removed debugging info
    * fixed settings panel
   
* 0.3.3 (2009/01/20)
		* now 'self' class gets attributed to <a> instead of <li>, so it doesn't
		  apply to all subpages when a parent page is selected
			NOTE: You should change the css styling to reflect this (or deactivate,
            then reactivate, and then click "restore original style" from the 
            settings panel
    * changed 'inline' to 'block', which fixes formatting
		* If current page is a subpage, the parent page is automatically expanded
		  in the list

* 0.3.2 (2009/01/07)
    * added version to javascript file
    * not loading unnecessary code for admin pages (fixes interference with
      akismet stats page
    * 'self' tag now gets added in subpages

* 0.3.1 (2009/01/06)
    * Finally fixed disappearing widget problem when trying to add to sidebar
    * Added debugging option to show the query used and the output
    * Moved style option to options page
    * tweaked default style some

* 0.3 (2008.12.04)
  * can now use multiple instance of the widget
  * can also use manually
  * added option to animate expanding
  * added more options for expanding characters
  * consolidated javascript to share code with other collapsing plugins
  * moved inline javascript to footer to speed page load time
  * made styling an option (better flexibility and reduce number of http
    requests)
  * made widget option box larger, and condensed options into fewer lines

* 0.2.5 (2008.11.01)
  * fixed bug in that autoExpand was not available to getSubPage

* 0.2.4 (2008.10.28)