@@ -3,7 +3,9 @@ Collapsing Pages Changelog
 * 0.4 (2009/02/10)
     * totally revised and improved style selecting methods
     * fixed settings panel issue
-    * reduced number of queries
+    * documentation now internationalized (Bernhard Reiter)
+    * german localization (Bernhard Reiter)
+    * Added truncate page title option
 
 * 0.3.5 (2009/02/04)
     * Updated internationalization support
